# eval-driven-llm

./: .gitignore  CLAUDE.md  DECISIONS.md  EXPERIMENT_hybrid.md  LICENSE  Makefile  README.md  pyproject.toml
configs/: eval.yaml  models.yaml
data/corpus/: README.md
data/corpus/_toy/: passages.jsonl
data/golden/: README.md
docs/: architecture.md  eval-report-template.md
reports/: SUMMARY.md  ceiling_check.md  notes.md  recall_metric_analysis.md
reports/20260604T040257/: report.md  results.json
reports/20260604T042010/: comparison.json  comparison.md
reports/20260604T182333-gen/: rag_report.md  rag_results.json
reports/20260605T024628-gen/: rag_report.md  rag_results.json
reports/deepdoc-eval-v1/: .gitignore  PHASE1_NOTES.md  summary.md
reports/deepdoc-eval-v1/parse_quality/: .gitignore  02_mof_budget_fy2025_mineru.json  03_stat_kakei_2023_mineru.json  04_mof_fiscal_202510_mineru.json  parse_summary.json  quality_analysis.json
reports/deepdoc-eval-v1/retrieval_delta/: golden_set.json  retrieval_results.json
reports/deepdoc-eval-v1/samples/: SOURCES.md
reports/deepdoc-eval-v2/: golden_set_v2.json  parser_comparison.md  retrieval_results_v2.json  retrieval_results_v3.json  summary.md  summary_v2.md
reports/model-selection-v1/: golden_qa.jsonl  golden_qa_v2.jsonl  run_benchmark.py  summary.md  summary_v2.md
reports/model-selection-v1/results/: cross_validation.json  elyza-jp-8b.json  elyza-jp-8b_judged.json  gemma4-31b.json  gemma4-31b_judged.json  nemotron-nano-9b-jp.json  nemotron-nano-9b-jp_judged.json  swallow-8b.json  swallow-8b_judged.json
scripts/: build_dirty_fixtures.py  build_toy_golden.py  ceiling_check.py  deepdoc_parse_all.py  gap_decompose.py  mineru_parse_all.py  ocr_quality_analysis.py  recall_metric_analysis.py  retrieval_delta.py  retrieval_delta_v2.py  retrieval_delta_v3.py
src/elv/: __init__.py
tests/: test_eval_smoke.py  test_generation_metrics.py  test_ingest.py  test_rerank.py
(+32 files in other folders)
