[project]
name = "elv"
version = "0.0.1"
description = "eval-driven reliable on-prem LLM systems"
requires-python = ">=3.11"
# Dependencies pinned on the target machine. Core eval (deterministic retrieval
# metrics) needs only the stdlib; payload deps (vllm, qdrant-client, faiss,
# sentence-transformers, ragas/deepeval) are added as layers are wired.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
sanity = ["eval-sanity>=0.2"]
# in-sandbox / baseline loop (deterministic, no model downloads)
base = ["numpy", "faiss-cpu"]
# production semantic stack (downloads model weights on the target machine)
# transformers<5 required: FlagEmbedding 1.4.0 calls prepare_for_model which was
# removed in transformers 5.0 (the tokenizer internal rework from 2025-05).
track-a = ["numpy", "faiss-cpu", "sentence-transformers", "datasets", "FlagEmbedding", "transformers<5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/elv"]
